# differential-value-iteration

./: .gitignore  LICENSE  README.md  environments.py  experiments.ipynb  main.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-app.yml
src/: main.py
src/differential_value_iteration/: garet_test.py  import_test.py  jax_works_test.py  utils.py
src/differential_value_iteration/algorithms/: algorithm.py  algorithms.py  async_strategies.py  dvi.py  dvi_test.py  golden_test.py  mdvi.py  mdvi_test.py  policy_test.py  random.py  rvi.py  rvi_test.py
src/differential_value_iteration/environments/: environments.py  garet.py  micro.py  mm1_queue.py  mm1_queue_test.py  structure.py  structure_test.py
src/differential_value_iteration/experiments/: async_dvi_experiment.py  control_benchmark.py  dvi_async_vs_sync.py  dvi_rvi_control_convergence_test.py  dvi_rvi_policy_quality_by_iterations.py  evaluation_convergence.py  simple_experiment_runner.py  specific_policy_convergence.py
src/differential_value_iteration/experiments/minimanager/: conductor.py  dvi_example.py  dvi_result_processor.py  job.py  mdp1_example.py  utils.py
